--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -63,7 +63,17 @@
             <div class="row">
               <div class="col">
                 <h3>Deck Color Distribution</h3>
-
+                <div id="chart">
+                  <apx-chart
+                    [series]="chartOptions.series"
+                    [chart]="chartOptions.chart"
+                    [labels]="chartOptions.labels"
+                    [fill]="chartOptions.fill"
+                    [dataLabels]="chartOptions.dataLabels"
+                    [responsive]="chartOptions.responsive"
+                    [legend]="chartOptions.legend"
+                  ></apx-chart>
+                </div>
               </div>
             </div>
           </div>
