game component started

--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary">
+<mat-toolbar color="primary" *ngIf="getLocation() !== 'games'">
   <button mat-icon-button><mat-icon>menu</mat-icon></button>
   <span class="toolbar-title"><h3>CommanderDash</h3></span>
   <span style="flex: 1 1 auto"></span>
