--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div style="width: 100vw; height: 100%; padding: 10px">
+<div style="width: 100vw; height: 100%">
   <div class="container-fluid">
     <div class="row">
       <div class="col-12 col-md-8 col-lg-5 col-xl-4" style="margin-top: 5px;">
@@ -24,7 +24,7 @@
                       </div>
                       <div class="col-6 col-xl-4">
                         <div class="row" style="justify-content: right; padding: 5px">
-                          <button mat-raised-button color="accent" style="width: 100px">JOIN</button>
+                          <button mat-raised-button color="accent" style="width: 100px" (click)="navigate('games')">JOIN</button>
                         </div>
                         <div class="row" style="margin-top: 5px; text-align: right">
                           <p>Time: 00:00</p>
